Реализовано автоматическое наследование отступов (auto-indentation) в EditFileTool для упрощения генерации кода